@@ -1,3 +1,8 @@
+2007-07-16  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter
+	CONNECTED.
+
 2007-07-15  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-find-shell, tramp-open-connection-telnet)
